--- a/src/app/header-page/header-page.component.css
+++ b/src/app/header-page/header-page.component.css
@@ -1,7 +1,6 @@
 .picture {
   /* Rectangle 300 */
-  width: 35%;
-  height: 90%;
+  width: 40%;
   background-image: url(../../assets/image.png);
   background-size: 100%;
   background-repeat: no-repeat;
@@ -40,6 +39,7 @@
   width: 100%;
   height: 30%;
   display: flex;
+  padding-bottom: 3%;
 }
 .leftBox {
   width: 50%;
