--- a/src/app/header-page/header-page.component.css
+++ b/src/app/header-page/header-page.component.css
@@ -18,7 +18,7 @@
   font-size: 50px;
   line-height: 59px;
   color: #09295e;
-  padding-top: 20%;
+  padding-top: 5%;
   padding-left: 7%;
 }
 .searchBar {
@@ -37,7 +37,7 @@
 
 .frameInt {
   width: 100%;
-  height: 30%;
+  height: 50%;
   display: flex;
   padding-bottom: 3%;
 }
@@ -78,4 +78,5 @@
   background-image: url(../../assets/Vector.png);
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
