--- a/src/app/country-dialog/country-dialog.component.html
+++ b/src/app/country-dialog/country-dialog.component.html
@@ -6,5 +6,7 @@
  <label>Currency: {{data.currency}}</label>
  <label>Languaje: {{data.language}}</label>
  <label>Border Countries: {{data.borderCountries}}</label>
- <label>Flag: {{data.flag}}</label>
+ <label>Flag:</label>
+ <br>
+ <img src={{data.flagPic}} width="200" height="150">
 </div>
